<resources>
    <string name="welcome_1">Welcome to Universal DC Driver Aplication 1.0</string>
    <string name="chose_option">Chose controlling mode</string>
    <string name="app_name">DC Driver App</string>
    <string name="motor1_label">Motor 1</string>
    <string name="motor2_label">Motor 2</string>
    <string name="stepper_label">Stepper motor</string>
    <string name="servo1_label">Servo 1</string>
    <string name="servo2_label">Servo 2</string>
    <string name="direction_label">Direction</string>
    <string name="velocity_label">Velocity</string>
    <string name="position_label">Position</string>
    <string name="left_label">L</string>
    <string name="right_label">R</string>
    <string name="back_btn_label">Back to menu</string>
    <string name="dc_motor_activity_btn_label">DC motor</string>
    <string name="servo_activity_btn_label">servo</string>
    <string name="stepper_activity_btn_label">stepper motor</string>
    <string name="mobile_platform_activity_btn_label">mobile platform</string>
    <string name="zero_angle_label">0</string>
    <string name="full_angle_label">135</string>
    <string name="left_move_label">Move left</string>
    <string name="right_move_label">Move right</string>
    <string name="step_hint">Steps</string>
    <string name="bt_switch">On/Off</string>
    <string name="connect_btn_label">Select driver</string>
    <string name="disconnect_btn_label">Disconnect</string>
    <string name="driver_name">HC-06</string>
    <string name="bt_image_description">Bluetooth icon</string>
    <string name="stop_btn">STOP</string>
    <string name="left_status">left_status</string>
    <string name="right_tatus">right_status</string>
    <string name="forward_status">forward_status</string>
    <string name="backward_status">backward_status</string>
    <string name="start_stop">start_stop</string>

</resources>
