<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".servo_activity">

    <Button
        android:id="@+id/dc_stepper_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="8dp"
        android:text="@string/back_btn_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/servo1_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="180dp"
        android:text="@string/servo2_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/servo_A_position_bar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:max="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/servo_B_position_bar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="35dp"
        android:max="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:text="@string/zero_angle_label"
        app:layout_constraintEnd_toStartOf="@+id/servo_A_position_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/full_angle_label"
        app:layout_constraintStart_toEndOf="@+id/servo_A_position_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="10dp"
        android:text="@string/zero_angle_label"
        app:layout_constraintEnd_toStartOf="@+id/servo_B_position_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:text="@string/full_angle_label"
        app:layout_constraintStart_toEndOf="@+id/servo_B_position_bar"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>